--- a/client/src/components/layout/infoPanes/CalendarInfoPane.module.css
+++ b/client/src/components/layout/infoPanes/CalendarInfoPane.module.css
@@ -138,6 +138,10 @@
 
 /* -------------------- APP STYLES --------------------  */
 
+.mobile {
+  margin: 0 -14px 0 -14px;
+}
+
 .mobile .snapshotItem img {
   height: 250px;
 }
