--- a/client/src/pages/ConstructionSites.module.css
+++ b/client/src/pages/ConstructionSites.module.css
@@ -187,3 +187,36 @@
     width: 100%;
   }
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile .siteName {
+  font-size: 12px;
+}
+
+.mobile .row {
+  padding-right: 15px;
+}
+
+.mobile .desc {
+  width: 100%;
+  margin-left: 10px;
+}
+
+.mobile .delete {
+  width: fit-content;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 0 0 10px;
+}
+
+.mobile .delete svg {
+  width: 14px;
+  height: 16px;
+}
+
+.mobile .addSiteContainer {
+  width: 100%;
+  justify-content: flex-end;
+  gap: 5px;
+}
