--- a/client/src/pages/TimelineSessions.module.css
+++ b/client/src/pages/TimelineSessions.module.css
@@ -32,7 +32,8 @@
   cursor: pointer;
 }
 
-.tableBody .row:hover {
+.tableBody .row:hover,
+.tableBody .row:focus {
   background-color: var(--neutral);
 }
 
