--- a/client/src/pages/ConstructionSites.module.css
+++ b/client/src/pages/ConstructionSites.module.css
@@ -42,12 +42,14 @@
   width: fit-content;
 }
 
-.addSiteToggle:hover {
+.addSiteToggle:hover,
+.addSiteToggle:focus {
   background-color: var(--primary);
   color: var(--light);
 }
 
-.addSiteToggle:hover .addIcon path {
+.addSiteToggle:hover .addIcon path,
+.addSiteToggle:focus .addIcon path {
   fill: var(--light);
 }
 
@@ -74,7 +76,8 @@
   cursor: pointer;
 }
 
-.row:hover {
+.row:hover,
+.row:focus {
   background-color: var(--neutral);
 }
 
@@ -121,7 +124,7 @@
   gap: 2px;
 }
 
-.siteName .active {
+.statusBadge.active {
   background-color: var(--neutral);
   color: var(--primary);
   padding: 2px 8px;
@@ -129,7 +132,7 @@
   font-size: 10px;
 }
 
-.siteName .inactive {
+.statusBadge.inactive {
   background-color: #dedede;
   color: #5c5c5c;
   padding: 2px 8px;
@@ -141,7 +144,8 @@
   fill: var(--primary);
 }
 
-.row.active .delete:hover svg path {
+.row.active .delete:hover svg path,
+.row.active .delete:focus svg path {
   fill: var(--dark);
 }
 
@@ -161,7 +165,8 @@
   align-items: center;
 }
 
-.delete button:hover svg path {
+.delete button:hover svg path,
+.delete button:focus svg path {
   fill: var(--primary);
 }
 
