--- a/client/src/pages/Cameras.module.css
+++ b/client/src/pages/Cameras.module.css
@@ -20,57 +20,88 @@ h2 {
 }
 
 .addDeviceButton {
+  width: 108px;
   display: flex;
+  padding: 10px 11px;
   align-items: center;
-  gap: 8px;
-  padding: 10px 15px;
-  background-color: var(--neutral);
-  border: none;
+  justify-content: space-around;
   border-radius: 30px;
-  cursor: pointer;
-  font-size: 14px;
+  background-color: var(--neutral);
+  color: var(--dark);
+  font-size: 12px;
+  transition: 0.2s;
 }
 
-.addDeviceButton:hover {
+.addDeviceButton:hover,
+.addDeviceButton.active {
   background-color: var(--primary);
   color: var(--light);
 }
 
+.addDeviceButton svg path {
+  transition: 0.2s;
+}
+
+.addDeviceButton:hover svg path,
+.addDeviceButton.active svg path {
+  fill: var(--light);
+}
+
 .dropdown {
   position: absolute;
-  top: 100%;
+  top: 130%;
   right: 0;
   background-color: var(--light);
   border: 1px solid var(--neutral);
-  border-radius: 8px;
-  padding: 10px;
-  width: 300px;
-  z-index: 10;
+  border-radius: 10px;
+  padding: 5px 0;
+  width: 400px;
+}
+
+.dropdown h3 {
+  padding: 8px 17px;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 5px;
 }
 
 .dropdownItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px;
-  border-bottom: 1px solid var(--neutral);
+  padding: 8px 17px;
+  cursor: pointer;
 }
 
-.dropdownItem:last-child {
-  border-bottom: none;
+.dropdownItem:hover {
+  background-color: var(--background-color);
 }
 
 .deviceName {
-  font-weight: 600;
+  width: 53%;
+  font-size: 13px;
+  font-weight: 500;
 }
 
 .deviceType {
-  color: var(--secondary);
+  width: 17%;
+  font-size: 12px;
+  text-align: center;
 }
 
 .deviceStatus {
+  width: 30%;
   font-size: 12px;
   color: var(--primary);
+  display: flex;
+  justify-content: flex-end;
+}
+
+.deviceStatus span {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
 .content {
@@ -82,86 +113,116 @@ h2 {
 .row {
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 8px 10px;
   background-color: var(--light);
-  border-radius: 8px;
+  border-radius: 15px;
   font-size: 13px;
 }
 
 .icon {
-  width: 5%;
-  margin-right: 15px;
+  width: fit-content;
+  margin-right: 2%;
   display: flex;
   align-items: center;
 }
 
 .name {
-  width: 25%;
-  /* font-size: 14px; */
+  width: 40%;
   font-weight: 500;
 }
 
 .status {
   width: 10%;
+  margin-right: 10px;
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
 .onlineDot {
-  width: 10px;
+  min-width: 10px;
+  max-width: 10px;
   height: 10px;
   background-color: var(--primary);
   border-radius: 50%;
 }
 
 .offlineDot {
-  width: 10px;
+  min-width: 10px;
+  max-width: 10px;
   height: 10px;
   border: 3px solid var(--neutral);
   border-radius: 50%;
 }
 
 .statusText {
-  /* font-size: 14px; */
+  font-size: 12px;
 }
 
 .lastSynced {
-  width: 25%;
+  width: 28%;
+  max-width: 260px;
+  min-width: 239px;
   font-size: 11px;
-  font-weight: 500;
-  color: var(--secondary);
+  color: #a7a7a7;
 }
 
 .connectButtonContainer {
-  width: 10%;
-  /* margin-left: auto; */
+  min-width: 15%;
+  max-width: 113px;
+  height: 34px;
+  display: flex;
+  justify-content: center;
 }
 
-.connectButton,
-.connectedButton {
+.connected {
+  padding: 10px 11px;
+  color: var(--primary);
+  font-weight: 600;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   gap: 8px;
-  padding: 8px 12px;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 14px;
 }
 
 .connectButton {
+  padding: 10px 11px;
   background-color: var(--neutral);
-  color: var(--dark);
+  color: var(--primary);
+  font-weight: 600;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  transition: 0.2s;
 }
 
-.connectedButton {
+.connectButton:disabled {
+  display: none;
+  font-weight: 400;
+  background-color: #e7e7e7;
+  color: #a7a7a7;
+  pointer-events: none;
+  cursor: auto;
+}
+
+.connectButton:disabled path {
+  fill: #a7a7a7;
+}
+
+.connectButton:hover {
   background-color: var(--primary);
   color: var(--light);
 }
 
+.connectButton:hover path {
+  fill: var(--light);
+  transition: 0.2s;
+}
+
 .delete {
-  width: 5%;
+  width: fit-content;
+  margin-left: 2%;
 }
 
 .delete button {
@@ -180,4 +241,10 @@ h2 {
 .delete button svg path {
   fill: var(--secondary);
   transition: 0.2s;
+}
+
+@media (max-width: 1160px) {
+  .lastSynced {
+    min-width: 0;
+  }
 }
