Refactor Settings component to accept isPWA prop; update user data in context

--- a/client/src/pages/Settings.module.css
+++ b/client/src/pages/Settings.module.css
@@ -303,3 +303,15 @@
   width: 180px;
   justify-content: center;
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile .tabs {
+  gap: 0;
+  justify-content: space-between;
+  font-size: 12px;
+}
+
+.mobile .tabs button {
+  padding: 10px;
+}
