--- a/client/src/pages/ChangeMode.module.css
+++ b/client/src/pages/ChangeMode.module.css
@@ -54,3 +54,11 @@
   font-size: 13px;
   font-weight: 400;
 }
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile .modesContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
