--- a/client/src/pages/ChangeMode.module.css
+++ b/client/src/pages/ChangeMode.module.css
@@ -1,6 +1,3 @@
-/* .changeMode {
-} */
-
 .modesContainer {
   width: 80%;
   height: 75vh;
@@ -32,6 +29,14 @@
   background-color: var(--neutral);
 }
 
+.mode .descGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
 .icon {
   width: 80px;
   height: 80px;
@@ -57,8 +62,36 @@
 
 /* -------------------- APP STYLES --------------------  */
 
+.mobile.changeMode {
+  /* overflow-x: hidden; */
+}
+
 .mobile .modesContainer {
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
+  min-width: auto;
+  min-height: auto;
+}
+
+.mobile .mode {
+  padding: 20px 10px;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.mobile .mode .descGroup {
+  width: 60%;
+  align-items: flex-start;
+}
+
+.mobile .mode p {
+  text-align: start;
+}
+
+.mobile .icon {
+  width: 80px;
+  min-width: 80px;
+  height: 80px;
 }
