--- a/client/src/components/SafetyTrends/OverallGraph.module.css
+++ b/client/src/components/SafetyTrends/OverallGraph.module.css
@@ -5,9 +5,6 @@
   flex-direction: column;
   justify-content: center;
   gap: 10px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .header {
@@ -25,7 +22,7 @@ h2 {
 
 .timeOption {
   padding: 4px 11px;
-  background-color: var(--neutral, #f0f0f0);
+  background-color: var(--neutral);
   border-radius: 15px;
   white-space: nowrap;
   font-size: 11px;
@@ -37,9 +34,8 @@ h2 {
 }
 
 .timeOption.active {
-  background-color: var(--secondary, #007bff);
+  background-color: var(--secondary);
   font-weight: 400;
-  color: white;
 }
 
 .options {
@@ -51,7 +47,7 @@ h2 {
 .content {
   width: 100%;
   display: flex;
-  align-items: center; /* Center items vertically */
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -100,18 +96,13 @@ h2 {
 }
 
 .chartContainer {
-  margin: 0 -20px -10px -50px;
-}
-
-.chartContainer {
-  margin: 0;
-  width: 110%; /* Adjust width */
-  min-height: 250px; /* Allow flexibility */
-  height: auto; /* Let it grow as needed */
-  min-height: unset;
+  width: 90%;
+  min-height: 200px;
+  height: auto;
   display: flex;
-  align-items: flex-start; /* Align chart properly */
+  align-items: flex-start;
   justify-content: center;
+  margin: 0 -6px -10px -30px;
 }
 
 .complianceWrapper {
@@ -134,15 +125,15 @@ h2 {
 }
 
 .badge {
-  font-size: 12px;
-  font-weight: bold;
+  font-size: 10px;
+  font-weight: 600;
   padding: 2px 5px;
   border-radius: 6px;
   display: flex;
   align-items: center; /* Ensures text inside badge is centered */
   justify-content: center;
   height: 18px; /* Prevents unnecessary stretching */
-  color: white;
+  color: var(--light);
   margin-top: 3px; /* Fine-tune this if needed */
   gap: 10px;
 }
@@ -151,10 +142,6 @@ h2 {
   display: flex;
   justify-content: space-between;
   gap: 15px;
-}
-
-.metricContainer {
-  margin-bottom: 15px; /* Adds spacing between each metric */
 }
 
 .leftAlign {
@@ -178,7 +165,7 @@ h2 {
 
 /* -------------------- MOBILE STYLES --------------------  */
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .card {
     padding: 15px 12px 7px;
   }
@@ -215,5 +202,56 @@ h2 {
     width: 100%;
     order: 1;
     margin: 0 0 -10px -60px;
+  }
+} */
+
+/* -------------------- APP STYLES --------------------  */
+
+.mobile.card {
+  padding: 15px 12px 7px;
+}
+
+.mobile.card h2 {
+  font-size: 13px;
+}
+
+.mobile .header {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+
+.mobile .header .options {
+  justify-content: start;
+  flex-wrap: wrap;
+  gap: 3px;
+}
+
+.mobile .timeOption {
+  padding: 5px 9px;
+  font-size: 10px;
+}
+
+.mobile .content {
+  flex-direction: column;
+}
+
+.mobile .content .metrics {
+  width: 100%;
+  padding: 11px 5px;
+  order: 2;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.mobile .content > .chartContainer {
+  width: 90%;
+  order: 1;
+  margin: 0 0 -10px -110px;
+}
+
+@media (min-width: 500px) {
+  .mobile .content > .chartContainer {
+    margin: 0 0 -10px -140px;
   }
 }
