--- a/client/src/components/incidentTrends/IncidentTrendsAndBreakdownCard.module.css
+++ b/client/src/components/incidentTrends/IncidentTrendsAndBreakdownCard.module.css
@@ -91,8 +91,10 @@
 
 .content {
   width: 100%;
+  max-height: 180px;
   display: flex;
   justify-content: space-between;
+  flex-grow: 1;
 }
 
 .content .column {
@@ -137,6 +139,11 @@
 
 .chartContainer {
   margin: 0 0 -10px -40px;
+}
+
+.noData {
+  height: 100%;
+  margin: auto;
 }
 
 @media (max-width: 1200px) {
