--- a/client/src/components/dashboard/RecentIncidents.module.css
+++ b/client/src/components/dashboard/RecentIncidents.module.css
@@ -68,6 +68,18 @@
   font-size: 9px;
 }
 
+.errorMessage {
+  font-size: 12px;
+  color: #a8a8a8;
+}
+
+@media (max-width: 1201px) {
+  .card {
+    width: 200px;
+    flex-grow: 3;
+  }
+}
+
 /* -------------------- APP STYLES --------------------  */
 
 .mobile.card {
