--- a/client/src/components/dashboard/SafetyScoreTrends.module.css
+++ b/client/src/components/dashboard/SafetyScoreTrends.module.css
@@ -89,6 +89,53 @@
   margin: 0 -20px -10px -50px;
 }
 
+.noData {
+  min-height: 150px;
+  margin: auto;
+  color: #a8a8a8;
+}
+
+@media (max-width: 1217px) {
+  .card .header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .options {
+    width: 100%;
+    gap: 5px;
+  }
+
+  .timeOption {
+    width: 100%;
+    text-align: center;
+    padding: 4px 5px;
+  }
+
+  .header h2 {
+    order: 2;
+  }
+}
+
+@media (max-width: 1201px) {
+  .content {
+    flex-direction: column;
+  }
+
+  .content > .chartContainer {
+    order: 1;
+    margin: 0 -10px -10px -30px;
+  }
+
+  .content > div {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+    order: 2;
+  }
+}
+
 /* -------------------- APP STYLES --------------------  */
 
 .mobile.card {
