--- a/client/src/components/dashboard/SessionDuration.module.css
+++ b/client/src/components/dashboard/SessionDuration.module.css
@@ -14,6 +14,27 @@
   justify-content: center;
 }
 
+@media (max-width: 1206px) {
+  .card {
+    padding: 9px 5px 4px 5px;
+  }
+}
+
+@media (max-width: 1201px) {
+  .card {
+    width: 100%;
+    height: 100%;
+    padding: 15px 12px 15px 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .card h2 {
+    text-align: center;
+  }
+}
+
 /* -------------------- APP STYLES --------------------  */
 
 .mobile {
