--- a/client/src/components/dashboard/Snapshots.module.css
+++ b/client/src/components/dashboard/Snapshots.module.css
@@ -56,3 +56,12 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 1201px) {
+  .card {
+    width: 200px;
+    min-height: 100%;
+    min-height: none;
+    flex-grow: 2;
+  }
+}
